css/styles.css
:root {
  --primary-dark-clr: #202020;
  --background-clr: #eaeaea;
  --form-background-clr: #fafafa;
  --logo-background-clr: rgb(0, 0, 0, .6);
  --label-clr: #555;
}

*, *::before, *::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

@font-face {
  font-family: 'Norse';
  src: url(/Norse-Bold.otf) format('truetype');
}

body {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  background-color: var(--background-clr);
}

.container {
  display: flex;
  height: 100vh;
}

.hero {
  flex: 1 1 40%;
  background-image: url('/images/design.jpg');
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;
  height: 100vh;
  position: relative;
}

.logo {
  width: 100%;
  height: 10rem;
  display: flex;
  justify-content: center;
  align-items: center;
  background: var(--logo-background-clr);
  margin-top: 1rem;
}

.norse-text {
  font-family: Norse, Arial, Helvetica, sans-serif;
  color: #fff;
  font-size: 6.5rem;
}

.logo .odin-img {
  height: 80%;
}

.img-author {
  position: absolute;
  bottom: .75rem;
  left: 50%;
  transform: translateX(-50%);
  text-align: center;
  color: var(--primary-dark-clr)
}

.img-author a:link,
.img-author a:visited {
  color: var(--primary-dark-clr);
}

.right {
  flex: 1 1 60%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  
}

.info-text {
  width: 80%;
  flex: 1 1 33%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-left: 2rem;
  padding-top: 3rem;
  font-size: 1.4rem;
  line-height: 1.2;
  font-weight: 500;
  color: var(--primary-dark-clr);
}

.info-text > p:last-child {
  margin-top: 2rem;
}

input {
  border: 1px solid #E5E7EB;
  border-radius: 5px;
  outline: none;
  font-size: 1.2rem;
  line-height: 1.5;
  padding: .25rem .5rem;
}

.form {
  flex: 1 1 33%;
  display: grid;
  grid-template-columns: repeat(2, minmax(19rem, 25rem));
  background-color: var(--form-background-clr);
  padding: clamp(1rem, 10vh, 2rem);
  box-shadow: 0 4px 10px -2px gray;
  position: relative;
}

.form .span-2 {
  grid-column: span 2;
}

.form .form-caption {
  font-size: 1.5rem;
  font-weight: 500;
  color: var(--primary-dark-clr);
  margin-bottom: 2rem;
}

.form-item {
  position: relative;
  margin-bottom: 1.5rem
}

.form-item label {
  position: absolute;
  top: 50%;
  left: 0.5rem;
  font-size: 1rem;
  color: var(--label-clr);
  transform: translateY(-50%);
  transition: all 0.2s ease-in-out;
}

input:focus + label,
input:valid + label {
  color: var(--primary-dark-clr);
  top: -.75rem;
  font-size: 0.9rem;
}

input:focus {
  border: 1px solid blue;
  box-shadow: 3px 3px 6px -2px gray;
}

.account-login {
  flex: 1 1 33%;
  margin-top: 3rem;
  padding-left: 2rem;
}

.btn {
  position: absolute;
  bottom: -6rem;
  left: 2rem;
  width: 15rem;
  height: 3.75rem;
  border-radius: .5rem;
  outline: none;
  border: none;
  cursor: pointer;
  font: inherit;
  font-size: 1.2rem;
  color: var(--form-background-clr);
  background-color: var(--primary-dark-clr);
}

.btn:hover {
  opacity: 0.9;
}

.account-login p {
  color: var(--primary-dark-clr);
  font-size: 1.1rem;
  margin-top: 4.5rem;
}

.account-login a {
  text-decoration: none;
  color: green;
}

.error {
  border: 1px solid red;
}

.password-error {
  position: absolute;
  display: none;
  font-size: 0.8rem;
  color: red;
}

.password-requirements {
  position: absolute;
  top: 3.5rem;
  display: none;
  font-size: 0.8rem;
  color: red;
}

